добавил openapi для /cards
